Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberObjectField.quorum
class Main
    Object v
    v:SetValue()
    action Main
        Test(v)
    end

    action Test(number var)
    end
end
